force-app/main/default/objects/Camping_Item__c/Camping_Item__c.object-meta.xml
<CustomObject>
    <label>Camping Item</label>
    <nameField>
        <label>Camping Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camping_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>