force-app/main/default/objects/Camping_Item__c/fields/Packed__c.field-meta.xml
<CustomField>
    <fullName>Packed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Packed</description>
    <inlineHelpText>Packed</inlineHelpText>
    <label>Packed</label>
    <type>Checkbox</type>
</CustomField>